browser-extension/crates/core/tests/snapshots/approved_test__extractor_approved@news_article.input.html.snap
---
source: crates/core/tests/approved_test.rs
expression: extracted
input_file: crates/core/tests/testdata/html/news_article.input.html
---
{
  "title": "Global Markets Rally Amid Tech Sector Growth - Daily News",
  "sections": [
    {
      "kind": "paragraph",
      "text": "NEW YORK — Markets worldwide saw a significant boost on Thursday, driven largely by stronger-than-expected earnings reports from major technology firms.",
      "depth": null,
      "selector": "p"
    },
    {
      "kind": "paragraph",
      "text": "The S&P 500 rose 1.2%, while the Nasdaq Composite surged 1.8%, hitting a new all-time high.",
      "depth": null,
      "selector": "p"
    },
    {
      "kind": "paragraph",
      "text": "\"Investors are realizing that the AI boom is not just a trend, but a fundamental shift in capital expenditure,\" said John Smith, chief analyst at Financial Group.",
      "depth": null,
      "selector": "p"
    },
    {
      "kind": "heading",
      "text": "Impact on European Markets",
      "depth": 3,
      "selector": "h3"
    },
    {
      "kind": "paragraph",
      "text": "Across the Atlantic, the FTSE 100 closed 0.9% higher, bolstered by tech companies listed in London.",
      "depth": null,
      "selector": "p"
    },
    {
      "kind": "paragraph",
      "text": "You have reached your limit of 5 free articles this month.",
      "depth": null,
      "selector": "p"
    },
    {
      "kind": "paragraph",
      "text": "[Button: Subscribe Now for $1/week]",
      "depth": null,
      "selector": "button"
    }
  ],
  "metadata": {
    "og_title": null,
    "og_description": null,
    "lang": "en",
    "canonical_url": null
  }
}
