browser-extension/crates/core/tests/snapshots/approved_test__extractor_approved@paragraphs.input.html.snap
---
source: crates/core/tests/approved_test.rs
expression: extracted
input_file: crates/core/tests/testdata/html/paragraphs.input.html
---
{
  "title": "",
  "sections": [
    {
      "kind": "paragraph",
      "text": "First paragraph.",
      "depth": null,
      "selector": "p"
    },
    {
      "kind": "paragraph",
      "text": "Second paragraph.",
      "depth": null,
      "selector": "p"
    }
  ],
  "metadata": {
    "og_title": null,
    "og_description": null,
    "lang": null,
    "canonical_url": null
  }
}
