browser-extension/crates/core/tests/snapshots/approved_test__extractor_approved@react_app.input.html.snap
---
source: crates/core/tests/approved_test.rs
expression: extracted
input_file: crates/core/tests/testdata/html/react_app.input.html
---
{
  "title": "React App",
  "sections": [
    {
      "kind": "heading",
      "text": "User Profile",
      "depth": 2,
      "selector": "h2"
    },
    {
      "kind": "paragraph",
      "text": "[Image: User avatar]",
      "depth": null,
      "selector": "img"
    },
    {
      "kind": "paragraph",
      "text": "[Button: Edit]",
      "depth": null,
      "selector": "button"
    },
    {
      "kind": "heading",
      "text": "Recent Activity",
      "depth": 3,
      "selector": "h3"
    }
  ],
  "metadata": {
    "og_title": null,
    "og_description": "Web site created using create-react-app",
    "lang": "en",
    "canonical_url": null
  }
}
