browser-extension/crates/core/tests/snapshots/approved_test__extractor_approved@simple.input.html.snap
---
source: crates/core/tests/approved_test.rs
expression: extracted
input_file: crates/core/tests/testdata/html/simple.input.html
---
{
  "title": "Simple Page Test",
  "sections": [
    {
      "kind": "heading",
      "text": "Welcome to the simple test",
      "depth": 1,
      "selector": "h1"
    },
    {
      "kind": "paragraph",
      "text": "This is a standard paragraph with some text.",
      "depth": null,
      "selector": "p"
    },
    {
      "kind": "heading",
      "text": "A sub-heading",
      "depth": 2,
      "selector": "h2"
    },
    {
      "kind": "paragraph",
      "text": "Another paragraph here.",
      "depth": null,
      "selector": "p"
    }
  ],
  "metadata": {
    "og_title": null,
    "og_description": null,
    "lang": "en",
    "canonical_url": null
  }
}
