browser-extension/crates/core/tests/snapshots/approved_test__extractor_approved@strips_boilerplate.input.html.snap
---
source: crates/core/tests/approved_test.rs
expression: extracted
input_file: crates/core/tests/testdata/html/strips_boilerplate.input.html
---
{
  "title": "",
  "sections": [
    {
      "kind": "paragraph",
      "text": "Content here.",
      "depth": null,
      "selector": "p"
    }
  ],
  "metadata": {
    "og_title": null,
    "og_description": null,
    "lang": null,
    "canonical_url": null
  }
}
